--- a/index.html
+++ b/index.html
@@ -27,19 +27,69 @@
                     <a href="contact.html"> contact</a>
                 </li>
                 <li>
-                    <a href="about html"> About</a>
+                    <a href="about.html">About</a>
                 </li>
             </ul>
         </nav>
     </header>
 
-<section class="hero">
-    <figure>
-        <img src="img/640px-20200719_180910_Suduch_Pizza,_Pizzeria_Yoav_Tel_Aviv_anagoria.jpg" alt="pizza shop" title="pizza ready!"
-        width="1000" height="649">
-        <figcaption class="offscreen">
-            Pizza shop
-        </figcaption>
-    </figure>
-</section>
+    <section class="hero">
+        <figure>
+            <img src="img/640px-20200719_180910_Suduch_Pizza,_Pizzeria_Yoav_Tel_Aviv_anagoria.jpg" alt="pizza shop"
+                title="pizza ready!" width="1000" height="649">
+            <figcaption class="offscreen">
+                Pizza shop
+            </figcaption>
+        </figure>
+    </section>
+    <main class="menu" class="main_article">
+        <h2>Our menu</h2>
+        <table>
+            <caption>Our Pizza</caption>
+            <thead>
+                <tr>
+                    <th>Pizza</th>
+                    <th scope="col"><abbr title="Quantity">Qty</abbr></th>
+                    <th scope="col">Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row" rowspan="3">
+                        Crunchy
+                    </th>
+                    <td>1</td>
+                    <td>$1.50</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>$3.25</td>
+                </tr>
+                <tr>
+                    <th scope="row" rowspan="">
+                        Soft
+                    </th>
+                    <td>1</td>
+                    <td>$2.00</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>$3.50</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>$4.50</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="3">
+                     Chips &amp; Salsa $2
+                    </td>
+                </tr>
+            </tfoot>
+        </table>
+
+
+    </main>
     </header>
