--- a/index.html
+++ b/index.html
@@ -48,25 +48,25 @@
             <caption>Our Pizza</caption>
             <thead>
                 <tr>
-                    <th>Pizza</th>
-                    <th scope="col"><abbr title="Quantity">Qty</abbr></th>
-                    <th scope="col">Price</th>
+                    <th class="menu__header" scope="col"> Pizza</th>
+                    <th class="menu__header" scope="col">Qty</th>
+                    <th class="menu__header" scope="col">Price</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <th scope="row" rowspan="3">
+                    <th class="menu__item menu__cr" scope="row" rowspan="3">
                         Crunchy
                     </th>
-                    <td>1</td>
-                    <td>$1.50</td>
+                    <td class="menu__item" 1</td>
+                    <td class="menu__item" $1.50</td>
                 </tr>
                 <tr>
-                    <td>3</td>
-                    <td>$3.25</td>
+                    <td class="menu__item" $3</td>
+                    <td class="menu__item" $3.25</td>
                 </tr>
                 <tr>
-                    <th scope="row" rowspan="">
+                    <th class="menu__item menu__sf" scope="row" rowspan="3">
                         Soft
                     </th>
                     <td>1</td>
@@ -89,7 +89,16 @@
                 </tr>
             </tfoot>
         </table>
-
-
+        <br>
+        <p>
+            <a href="#">Back To Top</a>
+        </p>
+        </article>
     </main>
-    </header>
+    <hr>
+    <footer>
+        <p>Copyright &copy;The Pizza Shop</p>
+</footer>
+</body>
+
+</html>
