--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
             </figcaption>
         </figure>
     </section>
-    <main class="menu" class="main_article">
-        <h2>Our menu</h2>
-        <table>
-            <caption>Our Pizza</caption>
+    <main class="menu" class="main__article menu">
+        <h2 class="menu__h2">Our Menu</h2>
+        <table class="menu__container">
+            <caption class="offscreen"> Our Pizza</caption>
             <thead>
                 <tr>
-                    <th class="menu__header" scope="col"> Pizza</th>
-                    <th class="menu__header" scope="col">Qty</th>
+                    <th class="menu__header" scope="col">Pizza</th>
+                    <th class="menu__header" scope="col">Quantity</th>
                     <th class="menu__header" scope="col">Price</th>
                 </tr>
             </thead>
@@ -58,39 +58,39 @@
                     <th class="menu__item menu__cr" scope="row" rowspan="3">
                         Crunchy
                     </th>
-                    <td class="menu__item" 1</td>
-                    <td class="menu__item" $1.50</td>
+                    <td class="menu__item" 1></td>
+                    <td class="menu__item" $1.50></td>
                 </tr>
                 <tr>
-                    <td class="menu__item" $3</td>
-                    <td class="menu__item" $3.25</td>
+                    <td class="menu__item" 3$></td>
+                    <td class="menu__item" $3.25></td>
                 </tr>
                 <tr>
                     <th class="menu__item menu__sf" scope="row" rowspan="3">
                         Soft
                     </th>
-                    <td>1</td>
-                    <td>$2.00</td>
+                    <td class="menu__item">1</td>
+                    <td class="menu__item">$2.00</td>
                 </tr>
                 <tr>
-                    <td>2</td>
-                    <td>$3.50</td>
+                    <td class="menu__item">2</td>
+                    <td class="menu__item">$3.50</td>
                 </tr>
                 <tr>
-                    <td>3</td>
-                    <td>$4.50</td>
+                    <td class="menu__item">3</td>
+                    <td class="menu__item">$4.50</td>
                 </tr>
             </tbody>
             <tfoot>
                 <tr>
-                    <td colspan="3">
+                    <td class="menu__item menu__cs" colspan="3">
                      Chips &amp; Salsa $2
                     </td>
                 </tr>
             </tfoot>
         </table>
-        <br>
-        <p>
+        
+        <p class="center">
             <a href="#">Back To Top</a>
         </p>
         </article>
